test/valid/tcomp000_power-of-power/power-of-power.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let main (x) : Unit -> Unit =
  print(5 ^ 4 ^ 3 ^ 2)