test/invalid-syntax/tcomp000_wrong_comment/wrong_comment.agu
-- Author: tcomp000, Vasco T. Vasconcelos

-- # Comments are to start with --, not #

let x : Int
